spacing fixed

--- a/styles/base.css
+++ b/styles/base.css
@@ -77,7 +77,7 @@ main{
     grid-area: 2/1/3/2;
     max-width: 1250px;
     justify-self: center;
-/*     margin:20px 0;  */
+    margin:20px 0; 
     padding: 5px 10%;
     display: grid;
     grid-template: auto / 2fr 225px;
@@ -119,7 +119,8 @@ li{
     margin-bottom: 3px;
 }
 
-div h3{
+div h3,
+div h2{
     margin: 8px;
 }
 
